@@ -82,11 +82,11 @@ Not tried: valgrind/callgrind/etc.
 
 BUILDING JUCE:
 Current download instructions for Juce's latest git version are:
-mkdir ~/juce-git.20160409
-cd ~/juce-git.20160409
+mkdir ~/juce-git.20160919
+cd ~/juce-git.20160919
 git clone --depth 1 git://github.com/julianstorer/JUCE.git
 cd ~
-ln -s juce-git.20160409/JUCE juce
+ln -s juce-git.20160919/JUCE juce
 
 Juce needs (at least) these Debian packages:
 g++                  # g++
@@ -122,41 +122,41 @@ gnome-terminal has funky color handling and the background shows up as dark
 
 NIFTY XBOARD COMMANDS:
 # human play against arctic (black)
-xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -fcp ./arctic
+xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -smpCores 8 -fcp ./arctic
 
 # play arctic (white) against default computer opponent (black)
 # (note: cannot use '-depth' argument, gnuchessx now gets confused and thinks
 # depth\n5\n is a move.
-xboard -size bulky -debug -thinking -mode TwoMachines -xponder -fcp ./arctic
+xboard -size bulky -debug -thinking -mode TwoMachines -xponder -smpCores 8 -fcp ./arctic
 
 # play arctic against itself
-xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -fcp ./arctic -scp ./arctic
+xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -smpCores 8 -fcp ./arctic -scp ./arctic
 
 # look at a game.
 xboard -size bulky -ncp
 
 # play arctic against older version
-xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -scp ./arctic -fcp ../../arcticExe/arctic10
+xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -smpCores 8 -scp ./arctic -fcp ../../arcticExe/arctic10
 
 # play arctic against older version (white)
-xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -fcp ./arctic -scp ../../arcticExe/arctic10
+xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -smpCores 8 -fcp ./arctic -scp ../../arcticExe/arctic10
 
 # play human on FICS
 xboard -size bulky -ics -icshost freechess.org # no timeseal
 xboard -size bulky -ics -icshost 167.114.65.195 -icshelper timeseal.Linux
 
 # play computer on FICS
-xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -ponder -thinking -zp -ics -icshost 167.114.65.195 -icshelper timeseal.Linux -fcp ./arctic -zippyGameStart 'say Hi, I am a homebrew computer program.  My author is mandolin.  Please have fun!'
+xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -ponder -thinking -zp -ics -icshost 167.114.65.195 -icshelper timeseal.Linux -smpCores 8 -fcp ./arctic -zippyGameStart 'say Hi, I am a homebrew computer program.  My author is mandolin.  Please have fun!'
 set highlight 0
 set examine 0
 set autoflag 1
 
 # Play a UCI engine - vs UCI engine match (pondering enabled to understand
 # UCI innards better)
-xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -ponder -mode TwoMachines -fcp "polyglot -noini -log true -lf /home/blandry/polyglot.log -ec fruit" -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log2 -ec stockfish"
+xboard -size bulky -debug -nameOfDebugFile ~/xboard.debug -thinking -ponder -mode TwoMachines -smpCores 8 -fcp "polyglot -noini -log true -lf /home/blandry/polyglot.log -ec fruit" -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log2 -ec stockfish"
 
 # Play arctic (UCI) against older version
-xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -fcp ../../arcticExe/arctic10 -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log3 -ec ./arctic"
+xboard -size bulky -defaultHashSize 508 -debug -nameOfDebugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -smpCores 8 -fcp ../../arcticExe/arctic10 -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log3 -ec ./arctic"
 
 # uci: figure out whether pondering returns a pondermove when stopped
 uci
